# Subatomic-OS

./: Cargo.toml  README.md  build.rs  justfile  limine-dev.conf  limine.conf  linker-x86_64.ld  target-x86_64.json
.cargo/: config.toml
kernel-core/: Cargo.toml
kernel-core/src/: api.rs  collections.rs  info.rs  lib.rs  logger.rs  module.rs  qemu.rs  rand.rs  requests.rs  serial.rs  style.rs  terminal.rs  time.rs  wrapper.rs
kernel-core/src/control/: command.rs  display.rs  input.rs  mod.rs
kernel-core/src/control/app/: breakout.rs  mod.rs
kernel-core/src/device/: mod.rs
kernel-core/src/device/pci/: caps.rs  classes.rs  config.rs  error.rs  mod.rs
kernel-core/src/sync/: init.rs  mod.rs  mutex.rs  rwlock.rs
kernel-x86_64/: Cargo.toml
kernel-x86_64/src/: acpi.rs  commands.rs  cpuid.rs  gdt.rs  init.rs  lib.rs  port.rs  time.rs
kernel-x86_64/src/interrupts/: apic.rs  exceptions.rs  idt.rs  keyboard.rs  mod.rs  timer.rs
kernel-x86_64/src/memory/: allocator.rs  frame_alloc.rs  mapper.rs  mod.rs
src/: allocator.rs  main.rs  panic.rs
