cargo-features = ["profile-rustflags"]

[workspace]
members = ["kernel-core", "kernel-x86_64"]
resolver = "3"

[workspace.dependencies]
kernel-core = { path = "kernel-core" }
kernel-x86_64 = { path = "kernel-x86_64" }
limine = "0.5.0"
log = { version = "0.4.29", features = ["release_max_level_warn"] }
pc-keyboard = "0.8.0"

[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
description = "Main kernel binary of Subatomic OS"

[dependencies]
kernel-core = { workspace = true }
log = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
kernel-x86_64 = { workspace = true }

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false
